fix list height on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -230,6 +230,6 @@ li {
     justify-content: space-between;
   }
   ul {
-    max-height: 230px;
+    max-height: 280px;
   }
 }
